// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonPill /> snapshot should match snapshot 1`] = `
<ButtonPill>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when a ghost 1`] = `
<ButtonPill
  ghost={true}
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={true}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={true}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when a ghost and disabled 1`] = `
<ButtonPill
  disabled={true}
  ghost={true}
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={true}
    data-ghost={true}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    isDisabled={true}
  >
    <FocusRing
      disabled={true}
    >
      <FocusRing
        disabled={true}
        focusClass="md-focus-ring-wrapper-disabled"
        focusRingClass="md-focus-ring-wrapper-disabled"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={true}
          data-ghost={true}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when color is outlined 1`] = `
<ButtonPill
  outline={true}
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={true}
    data-shallow-disabled={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={true}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when color is outlined and inverted is set 1`] = `
<ButtonPill
  inverted={true}
  outline={true}
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={true}
    data-outline={true}
    data-shallow-disabled={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={true}
          data-outline={true}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when disabled 1`] = `
<ButtonPill
  disabled={true}
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={true}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    isDisabled={true}
  >
    <FocusRing
      disabled={true}
    >
      <FocusRing
        disabled={true}
        focusClass="md-focus-ring-wrapper-disabled"
        focusRingClass="md-focus-ring-wrapper-disabled"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={true}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when shallow disabled 1`] = `
<ButtonPill
  shallowDisabled={true}
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={true}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={true}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot when width is grown 1`] = `
<ButtonPill
  grown={true}
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={true}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={true}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with className 1`] = `
<ButtonPill
  className="example-class"
>
  <ButtonSimple
    className="md-button-pill-wrapper example-class"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper example-class md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with color 1`] = `
<ButtonPill
  color="message"
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="message"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="message"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with contentVariations 1`] = `
<ButtonPill
  contentVariations={
    Object {
      "includeIcon": true,
      "stringContentVariations": Array [
        "Mute",
        "Unmute",
      ],
    }
  }
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <ButtonPillFixedWidthContent
            buttonPillSize={40}
            includeIcon={true}
            stringContentVariations={
              Array [
                "Mute",
                "Unmute",
              ]
            }
          >
            <div
              className="md-button-pill-fixed-width-content-wrapper"
            >
              <div
                className="md-button-pill-fixed-width-content-button-content"
                data-hidden={true}
                data-size={40}
                key="Mute"
              >
                <Icon
                  name="placeholder"
                  scale={20}
                />
                <Text
                  type="subheader-primary"
                >
                  <h3
                    className="md-text-wrapper"
                    data-type="subheader-primary"
                  >
                    Mute
                  </h3>
                </Text>
              </div>
              <div
                className="md-button-pill-fixed-width-content-button-content"
                data-hidden={true}
                data-size={40}
                key="Unmute"
              >
                <Icon
                  name="placeholder"
                  scale={20}
                />
                <Text
                  type="subheader-primary"
                >
                  <h3
                    className="md-text-wrapper"
                    data-type="subheader-primary"
                  >
                    Unmute
                  </h3>
                </Text>
              </div>
              <div
                className="md-button-pill-fixed-width-content-button-content"
                data-hidden={false}
                data-size={40}
              />
            </div>
          </ButtonPillFixedWidthContent>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with id 1`] = `
<ButtonPill
  id="example-id"
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    id="example-id"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          id="example-id"
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with size 1`] = `
<ButtonPill
  size={40}
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          type="button"
        >
          <span>
            Example Text
          </span>
        </button>
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with style 1`] = `
<ButtonPill
  style={
    Object {
      "color": "pink",
    }
  }
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    style={
      Object {
        "color": "pink",
      }
    }
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          style={
            Object {
              "color": "pink",
            }
          }
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;

exports[`<ButtonPill /> snapshot should match snapshot with title 1`] = `
<ButtonPill
  title="Example Text"
>
  <ButtonSimple
    className="md-button-pill-wrapper"
    data-color="primary"
    data-disabled={false}
    data-ghost={false}
    data-grown={false}
    data-inverted={false}
    data-outline={false}
    data-shallow-disabled={false}
    data-size={40}
    title="Example Text"
  >
    <FocusRing>
      <FocusRing
        focusClass="md-focus-ring-wrapper children"
        focusRingClass="md-focus-ring-wrapper children"
      >
        <button
          className="md-button-pill-wrapper md-button-simple-wrapper"
          data-color="primary"
          data-disabled={false}
          data-ghost={false}
          data-grown={false}
          data-inverted={false}
          data-outline={false}
          data-shallow-disabled={false}
          data-size={40}
          onBlur={[Function]}
          onClick={[Function]}
          onDragStart={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          title="Example Text"
          type="button"
        />
      </FocusRing>
    </FocusRing>
  </ButtonSimple>
</ButtonPill>
`;
